PDF Focus 是所有轮子里面最好的 商业库 要钱的

--- a/C#.NET Demo/研究PDFToWrod-Nuget/PDFToWrod/PDFToWrod.csproj
+++ b/C#.NET Demo/研究PDFToWrod-Nuget/PDFToWrod/PDFToWrod.csproj
@@ -48,6 +48,9 @@
     <Reference Include="itextsharp, Version=5.5.13.2, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>packages\iTextSharp.5.5.13.2\lib\itextsharp.dll</HintPath>
     </Reference>
+    <Reference Include="SautinSoft.PdfFocus, Version=8.0.6.21, Culture=neutral, PublicKeyToken=0b79b934109b3e9e, processorArchitecture=MSIL">
+      <HintPath>packages\sautinsoft.pdffocus.8.0.6.21\lib\net461\SautinSoft.PdfFocus.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
