--- a/C#.NET Demo/研究PDFToWrod-Nuget/PDFToWrod/packages.config
+++ b/C#.NET Demo/研究PDFToWrod-Nuget/PDFToWrod/packages.config
@@ -4,4 +4,5 @@
   <package id="Aspose.Words" version="21.10.0" targetFramework="net461" />
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13.2" targetFramework="net461" />
+  <package id="sautinsoft.pdffocus" version="8.0.6.21" targetFramework="net461" />
 </packages>
