绘制雷达的思路一  组合方式  原生从Control进行绘制 添加静态外观和动态行为 是最高阶的掌握框架和计算机图形图像 以及WIndows OS的消息机制

--- a/C#.NET Demo/做控件 WPF Winform 前端绘制本质 WEB框架和组件/做控件 WPF Winform 前端绘制本质 WEB框架和组件.csproj
+++ b/C#.NET Demo/做控件 WPF Winform 前端绘制本质 WEB框架和组件/做控件 WPF Winform 前端绘制本质 WEB框架和组件.csproj
@@ -7,4 +7,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Blend\**" />
+    <EmbeddedResource Remove="Blend\**" />
+    <None Remove="Blend\**" />
+    <Page Remove="Blend\**" />
+  </ItemGroup>
+
 </Project>
